crates/mecojoni-core/tests/fixtures/invalid/unknown-field.meco
---
meco: 1.0
module: npc
yaml: forbidden
---

# greeting
- Hello.
